kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cell-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cell-service
